fix double borders in menu

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -101,7 +101,7 @@ footer {
 }
 
 .header-item {
-  @apply px-2 py-2 text-zinc-pastel-pink bg-zinc-dark-purple border-t-2 border-l-2 border-r-2 border-b-2 border-zinc-pastel-pink drop-shadow-xl;
+  @apply px-2 py-2 text-zinc-pastel-pink bg-zinc-dark-purple border-t-2 border-l-2 border-b-2 border-zinc-pastel-pink drop-shadow-xl;
 }
 
 .header-item:last-child {
